# typst-mcp

./: .gitignore  AGENTS.md  Justfile  README.md  pyproject.toml
data/: download_data.sh
src/typst_mcp/: embed.py  ingest.py  mcp.py  vector_store.py
tests/: test_chunk_token_distribution.py
